--- a/ArcGIS_Sample/Info.plist
+++ b/ArcGIS_Sample/Info.plist
@@ -43,5 +43,12 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>マップ上での現在位置確認に位置情報サービスを使用します。</string>
 </dict>
 </plist>
